--- a/chap5.tex
+++ b/chap5.tex
@@ -53,7 +53,6 @@ In the software specification, it is designed to have search option on the user 
   \caption{test 2}
 \end{table}
 
-
 \pagebreak
 \section*{Reserving a machine}
 Reserving machine is another requirement we have implemented in this software. This is the process where users choose and reserve a machine for definite time and date. When a reservation is made, the details of the reservation appears under the machine being reserved. Figure \ref{reserve} shows the evaluating process of this function, where we put details of reservation, by selecting a user name, machine and inserting start and end time/date. After submitting with the reserve button, the it appears on the inventory with other reservations list. During the testing we tried to input a wrong date and time format and we got an error as shown in figure \ref{error}. This proved that the software will not take an invalid date format for any reservation process in the system, rather it will issue a warning to the users appropriately.
@@ -74,9 +73,10 @@ Reserving machine is another requirement we have implemented in this software. T
 \caption{Error message}
 \label{error}
 \end{figure}
+\pagebreak
 
 \section*{Updating a machine}
-Update functionality allow users to change the details of a machine already stored in the database. This is to enable them update the information about each machine as needed when ever there is an upgrade in the system. We have tested this functionality by changing the entire information of a machine listed in the inventory. Figure \ref{update}  shows the process of updating the inventory. This process has proved that this function performed as required because data was collected accordingly and stored with out any error.
+Update functionality allow users to change the details of a machine already stored in the database. This is to enable them update the information about each machine as needed when ever there is an upgrade in the system. We have tested this functionality by changing the entire information of a machine listed in the inventory. Figure \ref{update} shows the process of updating the inventory. This process has proved that this function performed as required because data was collected accordingly and stored with out any error.
 \begin{figure}[h]
   \includegraphics[width=\linewidth]{update.eps}
   \label{update}
